# DAG-Based-Token-Representation

./: .gitignore  Compression_Comparison.ipynb  DAG_Based_Compression_Comparison.ipynb  DAG_Encoding.ipynb  DAG_Text_Encoding.ipynb  README.md  config.py  main.py  pyproject.toml  unit_tests.py
algorithm/: TokenSetNode.py  abcdabcd_out.txt  bee_movie_out.txt  custom.py  huffman.py  problem_tree.py  problem_tree_helper.py  test_custom.py  test_huffman.py  tests.py  tokenizer.py
examples/: bee_movie.py
graphs/: bee-movie text-patterns min-freq=1.csv  bee-movie text-patterns min-freq=2.csv  bee_movie min-freq=10.csv  bee_movie.csv
graphs/Gephi/: bee-movie min-freq=10.gephi  bee-movie text-patterns min-freq=2.gephi
modules/: CompositionDAGNode.py  DAGStore.py  FlatTreeStore.py  SuffixNode.py  unit_tests.py
src/tokenBN/: CompositionDAGNode.py  FlatTreeStore.py  README.md  SuffixNode.py  __init__.py  config.py
src/tokenBN/utils/: __init__.py  figures.py  util.py  vector_embedding.py
tests/: run_tests.py  test_CompositionDAGNode.py  test_FlatTreeNode.py  test_SuffixNode.py  unit_tests.py
utils/: figures.py  util.py
